[tool.poetry]
name = "streamlit_auth"
version = "0.1.0"
description = "Pre-built and secure Login/ Sign-Up page for streamlit apps - fork of `streamlit_login_auth_ui`."
authors = ["Gwang Jin Kim <gwang.jin.kim.phd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^1.10"
argon2 = "^0.1.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
